tests/lean/bad_error5.lean.expected.out
bad_error5.lean:9:11: warning: declaration 'V' uses sorry
bad_error5.lean:9:11: warning: declaration 'V.equations._eqn_1' uses sorry
bad_error5.lean:9:0: error: _tactic._val_3: trying to evaluate sorry
